Solved an issue of the white space vertically but not horizontally

--- a/music.css
+++ b/music.css
@@ -14,9 +14,10 @@ body{
 }
 
 .mega{
+   
     position: relative;
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
+    max-width: 100%;
 }
 
 .mega::before {
@@ -30,10 +31,13 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    background-attachment: fixed;
     opacity:0.7;
     box-shadow: inset 0 0 0 1000px rgba(199, 10, 10, 0.322);
     
 }
+
+
 
 /*In making a nav we deal with the 
 link and list sizes, color etc*/
@@ -162,10 +166,12 @@ footer{
 }
 
 .sub-main{
+    white-space: nowrap;/*Doesnt allow divs to wrap when the page is reduced*/
     display: flex;
     margin-top: 30px;
     margin-right: 30px;
-    padding: 20px 20px;
+    padding: 10px 10px;
+    margin-bottom: 3px;
     position: relative;
 }
 
@@ -182,9 +188,11 @@ img{
     display: inline-block;
     height:350px;
     width: 90%;
+    
 }
 
 .sector1{
+    display: inherit;
     margin-bottom: 15px;
 }
 
@@ -233,6 +241,8 @@ img{
     margin: 7px 0px 7px 0px;
 }
 
+
+
 .up .first{
     font-size: 20px;
     padding: 12px;
@@ -267,8 +277,10 @@ img{
 }
 
 .lorem{
+    
     font-size: 23px;
     line-height: 32px;
+    margin: 24px 5px;
     padding: 0 40px;
     color: white;
 }
